--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,20 @@
 
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <protobuf.gradle.plugin.version>0.8.18</protobuf.gradle.plugin.version>
+        <protoc.jar.maven.plugin>3.11.4</protoc.jar.maven.plugin>
+        <protobuf.version>3.21.1</protobuf.version>
+        <spring.kafka.version>2.8.6</spring.kafka.version>
+        <io.kafka.confluent.version>7.1.1</io.kafka.confluent.version>
     </properties>
 
-    <repositories>
+   <!-- <repositories>
         <repository>
             <id>talend-custom-libs-release</id>
             <name>artifactory</name>
             <url>https://artifactory.intouchhealth.io/artifactory/talend-custom-libs-release/</url>
         </repository>
-    </repositories>
+    </repositories>-->
 
     <dependencies>
     <dependency>
@@ -75,6 +80,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protoc</artifactId>
+            <version>${protobuf.version}</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -106,13 +123,36 @@
             <version>2.3.3</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>${spring.kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>${spring.kafka.version}</version>
+            <scope>test</scope>
+        </dependency>
+      <!--  <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-protobuf-serializer</artifactId>
+            <version>${io.kafka.confluent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-schema-registry-client</artifactId>
+            <version>${io.kafka.confluent.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-dom</artifactId>
             <version>2.2.5</version>
         </dependency>
-
+-->
         <dependency>
             <groupId>com.sun.xml.messaging.saaj</groupId>
             <artifactId>saaj-impl</artifactId>
@@ -138,6 +178,37 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-gradle-plugin</artifactId>
+                <version>${protobuf.gradle.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>com.github.os72</groupId>
+                <artifactId>protoc-jar-maven-plugin</artifactId>
+                <version>${protoc.jar.maven.plugin}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <id>generate-protobuf</id>
+                        <configuration>
+                            <inputDirectories>
+                                <include>${project.basedir}/src/main/java/com/teledoc/globalid/graphql/proto</include>
+                            </inputDirectories>
+                            <outputTargets>
+                                <outputTarget>
+                                    <type>java</type>
+                                    <addSources>main</addSources>
+                                    <outputDirectory>${project.basedir}/target/generated-sources/protobuf</outputDirectory>
+                                </outputTarget>
+                            </outputTargets>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
