--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,11 @@
             <artifactId>saaj-impl</artifactId>
             <version>1.3.28</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
